tests/diagnostics/negative/symbol_resolution/unknown_identifier.vit
space vitte/tests/diagnostics/negative/unknown_identifier

proc main() -> int {
  give missing_negative_symbol
}
